@@ -13,12 +13,14 @@ type config struct {
 	RotateEveryKb int          `config:"rotate_every_kb" validate:"min=1"`
 	NumberOfFiles int          `config:"number_of_files"`
 	Codec         codec.Config `config:"codec"`
+	Permissions   uint32       `config:"permissions"`
 }
 
 var (
 	defaultConfig = config{
 		NumberOfFiles: 7,
 		RotateEveryKb: 10 * 1024,
+		Permissions:   0600,
 	}
 )
 
