@@ -589,6 +589,9 @@ output.elasticsearch:
   # default is 7 files.
   #number_of_files: 7
 
+  # Permissions to use for file creation. The default is 0600.
+  #permissions: 0600
+
 
 #----------------------------- Console output ---------------------------------
 #output.console:
